--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     margin: 0px;
 }
 
+.margin-medium{
+    margin: 5rem 0rem;
+}
+
 .container{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -82,10 +86,13 @@ hr{
     color: var(--dark-gray);
     padding-top: 1rem;
     text-align: center;
-    
 }
 .hero .heading-inverted{
     color: var(--primary-color);
+}
+.hero .about-hero{
+    margin-bottom: 3rem;
+    text-align: center;
 }
 
 .section{
@@ -106,6 +113,7 @@ hr{
     padding: 2rem 1rem;
     color: white;
     border-top-right-radius: 1rem;
+    margin-top: 2rem;
 }
 .footer ul{
     padding-inline-start: 0px;
@@ -113,4 +121,9 @@ hr{
 
 .footer .link{
     color: white;
+}
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
 }
